test/spec_vectors/simd_f32x4_rounding/fail/module_18.wat
(module (func (result v128) (f32x4.floor (i32.const 0))))